# timezz

./: Cargo.toml  README.md
src/: main.rs  org.gtk_rs.TimeZZ.gschema.xml  style.css
